--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-ultralytics>=8.2.0
+ultralytics>=8.1.0
 opencv-python>=4.8.0
 numpy>=1.24.0
-scipy>=1.10.0
+scipy>=1.11.0
+Pillow>=10.0.0
+matplotlib>=3.7.0
